fix title alignment

--- a/src/components/container/style.module.scss
+++ b/src/components/container/style.module.scss
@@ -20,5 +20,9 @@
 
   @media (min-width: 768px) {
     width: 70%;
+
+    .title {
+      text-align: start;
+    }
   }
 }
